@@ -155,6 +155,17 @@
  $ make menuconfig
 </pre>
 
+<p>to run the curses-based configurator, or</p>
+
+<pre>
+ $ make xconfig
+</pre>
+
+    <p>to run the Qt3-based configurator. On Debian-like systems, the
+    <code>libncurses5-dev</code> package is required to use the
+    <i>menuconfig</i> interface, and the <code>libqt3-mt-dev</code> is
+    required to use the <i>xconfig</i> interface.</p>
+
     <p>For each entry of the configuration tool, you can find associated help
     that describes the purpose of the entry. </p>
 
@@ -219,9 +230,9 @@
     <h3><a name="offline_builds" id="offline_builds"></a>
     Offline builds</h3>
 
-    <p>If you intend to do an offline-build and just want to download all
-    sources that you previously selected in &quot;make menuconfig&quot; then
-    issue:</p>
+    <p>If you intend to do an offline-build and just want to download
+    all sources that you previously selected in the configurator
+    (<i>menuconfig</i> or <i>xconfig</i>) then issue:</p>
 <pre>
  $ make source
 </pre>
@@ -340,9 +351,10 @@ $ make me&lt;TAB&gt;
       is made. So simply rebuilding the image by running
       make should propagate any new changes to the image. </li>
 
-      <li>When configuring the build system, using <code>make menuconfig</code>,
-      you can specify the contents of the /etc/hostname and /etc/issue
-      (the welcome banner) in the <code>PROJECT</code> section</li>
+      <li>When configuring the build system, using <code>make
+      menuconfig</code> or <code>make xconfig</code>, you can specify
+      the contents of the /etc/hostname and /etc/issue (the welcome
+      banner) in the <code>PROJECT</code> section</li>
     </ul>
 
     <h2><a name="custom_busybox" id="custom_busybox"></a>Customizing the
